fix spacing on exp cards

--- a/src/styles/pages/experience.css
+++ b/src/styles/pages/experience.css
@@ -154,6 +154,7 @@
   font-size: 1.25rem;
   display: block;
   text-align: center;
+  margin-bottom: .5rem;
 }
 
 .experience__skills-container {
